fix: Success check mark aligning center always.

--- a/src/styles/success-checkmark.css
+++ b/src/styles/success-checkmark.css
@@ -16,7 +16,6 @@
   stroke-width: 2;
   stroke: green;
   stroke-miterlimit: 10;
-  margin: 10% auto;
   box-shadow: inset 0px 0px 0px #7ac142;
   animation: fill 0.4s ease-in-out 0.4s forwards,
     scale 0.3s ease-in-out 0.9s both;
